fix(codeblocks): set overflow:auto to not extend long line outside boundaries

--- a/static/style.css
+++ b/static/style.css
@@ -125,6 +125,11 @@ a {
     color: var(--link);
 }
 
+/* codeblocks */
+pre {
+    overflow: auto;
+}
+
 a:hover {
     color: var(--bg);
     background-color: var(--link);
